metadata/objects/graxcaseindex__x.object
<CustomObject>
    <fields>
        <fullName>CreatedBy_Name__c</fullName>
        <description>CreatedBy_Name</description>
        <externalDeveloperName>CreatedBy_Name</externalDeveloperName>
        <label>CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <description>CreatedDate__c</description>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>CreatedDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By_Role_c__c</fullName>
        <description>Created_By_Role__c</description>
        <externalDeveloperName>Created_By_Role__c</externalDeveloperName>
        <label>Created_By_Role__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Override_c__c</fullName>
        <description>Creator_Override__c</description>
        <externalDeveloperName>Creator_Override__c</externalDeveloperName>
        <label>Creator_Override__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Purchase_Quantity_from_AG__c</fullName>
        <description>Current_Annual_Purchase_Quantity_from_AG__c</description>
        <externalDeveloperName>Current_Annual_Purchase_Quantity_from_AG__c</externalDeveloperName>
        <label>Current_Annual_Purchase_Quantity_from_AG</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approver_Name_c__c</fullName>
        <description>Current_Approver_Name__c</description>
        <externalDeveloperName>Current_Approver_Name__c</externalDeveloperName>
        <label>Current_Approver_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approver_c__c</fullName>
        <description>Current_Approver__c</description>
        <externalDeveloperName>Current_Approver__c</externalDeveloperName>
        <label>Current_Approver__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_MOQ_c__c</fullName>
        <description>Current_MOQ__c</description>
        <externalDeveloperName>Current_MOQ__c</externalDeveloperName>
        <label>Current_MOQ__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Margin_c__c</fullName>
        <description>Current_Margin__c</description>
        <externalDeveloperName>Current_Margin__c</externalDeveloperName>
        <label>Current_Margin__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Non_Current_Inquiry_c__c</fullName>
        <description>Current_Non_Current_Inquiry__c</description>
        <externalDeveloperName>Current_Non_Current_Inquiry__c</externalDeveloperName>
        <label>Current_Non_Current_Inquiry__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Price_c__c</fullName>
        <description>Current_Price__c</description>
        <externalDeveloperName>Current_Price__c</externalDeveloperName>
        <label>Current_Price__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Revenue_c__c</fullName>
        <description>Current_Revenue__c</description>
        <externalDeveloperName>Current_Revenue__c</externalDeveloperName>
        <label>Current_Revenue__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Supplier_Will_Deliver_Open_PO_c__c</fullName>
        <description>Current_Supplier_Will_Deliver_Open_PO__c</description>
        <externalDeveloperName>Current_Supplier_Will_Deliver_Open_PO__c</externalDeveloperName>
        <label>Current_Supplier_Will_Deliver_Open_PO__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Date_Field_c__c</fullName>
        <description>Custom_Date_Field__c</description>
        <externalDeveloperName>Custom_Date_Field__c</externalDeveloperName>
        <label>Custom_Date_Field__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Contacted_Dealer_c__c</fullName>
        <description>Customer_Contacted_Dealer__c</description>
        <externalDeveloperName>Customer_Contacted_Dealer__c</externalDeveloperName>
        <label>Customer_Contacted_Dealer__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Reference_Number_c__c</fullName>
        <description>Customer_Order_Reference_Number__c</description>
        <externalDeveloperName>Customer_Order_Reference_Number__c</externalDeveloperName>
        <label>Customer_Order_Reference_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours_c__c</fullName>
        <description>DB_Case_Duration_Hours__c</description>
        <externalDeveloperName>DB_Case_Duration_Hours__c</externalDeveloperName>
        <label>DB_Case_Duration_Hours__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours_c__c</fullName>
        <description>DB_Hours__c</description>
        <externalDeveloperName>DB_Hours__c</externalDeveloperName>
        <label>DB_Hours__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DFS_Credit_Manager_c__c</fullName>
        <description>DFS_Credit_Manager__c</description>
        <externalDeveloperName>DFS_Credit_Manager__c</externalDeveloperName>
        <label>DFS_Credit_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFS_Reminder_c__c</fullName>
        <description>DFS_Reminder__c</description>
        <externalDeveloperName>DFS_Reminder__c</externalDeveloperName>
        <label>DFS_Reminder__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Cause_c__c</fullName>
        <description>DSS_Cause__c</description>
        <externalDeveloperName>DSS_Cause__c</externalDeveloperName>
        <label>DSS_Cause__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Sub_Category_c__c</fullName>
        <description>DSS_Sub_Category__c</description>
        <externalDeveloperName>DSS_Sub_Category__c</externalDeveloperName>
        <label>DSS_Sub_Category__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c_c__c</fullName>
        <description>DateTime_Closed_c__c</description>
        <externalDeveloperName>DateTime_Closed_c__c</externalDeveloperName>
        <label>DateTime_Closed_c__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c_c__c</fullName>
        <description>DateTime_Opened_c__c</description>
        <externalDeveloperName>DateTime_Opened_c__c</externalDeveloperName>
        <label>DateTime_Opened_c__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Originally_Closed_c__c</fullName>
        <description>Date_Time_Originally_Closed__c</description>
        <externalDeveloperName>Date_Time_Originally_Closed__c</externalDeveloperName>
        <label>Date_Time_Originally_Closed__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Reopened_c__c</fullName>
        <description>Date_Time_Reopened__c</description>
        <externalDeveloperName>Date_Time_Reopened__c</externalDeveloperName>
        <label>Date_Time_Reopened__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_SLA_c__c</fullName>
        <description>Deadline_SLA__c</description>
        <externalDeveloperName>Deadline_SLA__c</externalDeveloperName>
        <label>Deadline_SLA__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Contacted_Parts_c__c</fullName>
        <description>Dealer_Contacted_Parts__c</description>
        <externalDeveloperName>Dealer_Contacted_Parts__c</externalDeveloperName>
        <label>Dealer_Contacted_Parts__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Contacted_Service_c__c</fullName>
        <description>Dealer_Contacted_Service__c</description>
        <externalDeveloperName>Dealer_Contacted_Service__c</externalDeveloperName>
        <label>Dealer_Contacted_Service__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Information_Quality_c__c</fullName>
        <description>Dealer_Information_Quality__c</description>
        <externalDeveloperName>Dealer_Information_Quality__c</externalDeveloperName>
        <label>Dealer_Information_Quality__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Number_c__c</fullName>
        <description>Dealer_Number__c</description>
        <externalDeveloperName>Dealer_Number__c</externalDeveloperName>
        <label>Dealer_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Note_Number_c__c</fullName>
        <description>Delivery_Note_Number__c</description>
        <externalDeveloperName>Delivery_Note_Number__c</externalDeveloperName>
        <label>Delivery_Note_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployed_to_UAT_c__c</fullName>
        <description>Deployed_to_UAT__c</description>
        <externalDeveloperName>Deployed_to_UAT__c</externalDeveloperName>
        <label>Deployed_to_UAT__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Required_c__c</fullName>
        <description>Deployment_Required__c</description>
        <externalDeveloperName>Deployment_Required__c</externalDeveloperName>
        <label>Deployment_Required__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_English_c__c</fullName>
        <description>Description_English__c</description>
        <externalDeveloperName>Description_English__c</externalDeveloperName>
        <label>Description_English__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Approved_c__c</fullName>
        <description>Design_Approved__c</description>
        <externalDeveloperName>Design_Approved__c</externalDeveloperName>
        <label>Design_Approved__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Requirements_c__c</fullName>
        <description>Detailed_Requirements__c</description>
        <externalDeveloperName>Detailed_Requirements__c</externalDeveloperName>
        <label>Detailed_Requirements__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_c__c</fullName>
        <description>Disposition__c</description>
        <externalDeveloperName>Disposition__c</externalDeveloperName>
        <label>Disposition__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Director_c__c</fullName>
        <description>District_Director__c</description>
        <externalDeveloperName>District_Director__c</externalDeveloperName>
        <label>District_Director__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_c__c</fullName>
        <description>Division__c</description>
        <externalDeveloperName>Division__c</externalDeveloperName>
        <label>Division__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_PATS_Date_Request_Date_c__c</fullName>
        <description>Does_PATS_Date_Request_Date__c</description>
        <externalDeveloperName>Does_PATS_Date_Request_Date__c</externalDeveloperName>
        <label>Does_PATS_Date_Request_Date__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Change_Count_c__c</fullName>
        <description>Due_Date_Change_Count__c</description>
        <externalDeveloperName>Due_Date_Change_Count__c</externalDeveloperName>
        <label>Due_Date_Change_Count__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_c__c</fullName>
        <description>Due_Date__c</description>
        <externalDeveloperName>Due_Date__c</externalDeveloperName>
        <label>Due_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_c__c</fullName>
        <description>Duration__c</description>
        <externalDeveloperName>Duration__c</externalDeveloperName>
        <label>Duration__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E2CP_AdditionalBCC_c__c</fullName>
        <description>E2CP__AdditionalBCC__c</description>
        <externalDeveloperName>E2CP__AdditionalBCC__c</externalDeveloperName>
        <label>E2CP__AdditionalBCC__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_AdditionalCC_c__c</fullName>
        <description>E2CP__AdditionalCC__c</description>
        <externalDeveloperName>E2CP__AdditionalCC__c</externalDeveloperName>
        <label>E2CP__AdditionalCC__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_AdditionalTo_c__c</fullName>
        <description>E2CP__AdditionalTo__c</description>
        <externalDeveloperName>E2CP__AdditionalTo__c</externalDeveloperName>
        <label>E2CP__AdditionalTo__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_Disable_Email_Distribution_c__c</fullName>
        <description>E2CP__Disable_Email_Distribution__c</description>
        <externalDeveloperName>E2CP__Disable_Email_Distribution__c</externalDeveloperName>
        <label>E2CP__Disable_Email_Distribution__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_ExtraEmails_c__c</fullName>
        <description>E2CP__ExtraEmails__c</description>
        <externalDeveloperName>E2CP__ExtraEmails__c</externalDeveloperName>
        <label>E2CP__ExtraEmails__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_HistoryText_Inc_Private_c__c</fullName>
        <description>E2CP__HistoryText_Inc_Private__c</description>
        <externalDeveloperName>E2CP__HistoryText_Inc_Private__c</externalDeveloperName>
        <label>E2CP__HistoryText_Inc_Private__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_HistoryText_c__c</fullName>
        <description>E2CP__HistoryText__c</description>
        <externalDeveloperName>E2CP__HistoryText__c</externalDeveloperName>
        <label>E2CP__HistoryText__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_Most_Recent_Private_Comment_HTML_c__c</fullName>
        <description>E2CP__Most_Recent_Private_Comment_HTML__c</description>
        <externalDeveloperName>E2CP__Most_Recent_Private_Comment_HTML__c</externalDeveloperName>
        <label>E2CP__Most_Recent_Private_Comment_HTML__</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_Most_Recent_Private_Comment_c__c</fullName>
        <description>E2CP__Most_Recent_Private_Comment__c</description>
        <externalDeveloperName>E2CP__Most_Recent_Private_Comment__c</externalDeveloperName>
        <label>E2CP__Most_Recent_Private_Comment__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_Most_Recent_Public_Comment_HTML_c__c</fullName>
        <description>E2CP__Most_Recent_Public_Comment_HTML__c</description>
        <externalDeveloperName>E2CP__Most_Recent_Public_Comment_HTML__c</externalDeveloperName>
        <label>E2CP__Most_Recent_Public_Comment_HTML__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP_Most_Recent_Public_Comment_c__c</fullName>
        <description>E2CP__Most_Recent_Public_Comment__c</description>
        <externalDeveloperName>E2CP__Most_Recent_Public_Comment__c</externalDeveloperName>
        <label>E2CP__Most_Recent_Public_Comment__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM_DB_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EDY_ORGCUSTOM__DB__c</description>
        <externalDeveloperName>EDY_ORGCUSTOM__DB__c</externalDeveloperName>
        <label>EDY_ORGCUSTOM__DB__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ED_Leading_Causes_c__c</fullName>
        <description>ED_Leading_Causes__c</description>
        <externalDeveloperName>ED_Leading_Causes__c</externalDeveloperName>
        <label>ED_Leading_Causes__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Prescription_c__c</fullName>
        <description>ED_Prescription__c</description>
        <externalDeveloperName>ED_Prescription__c</externalDeveloperName>
        <label>ED_Prescription__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort_to_Resolve_c__c</fullName>
        <description>Effort_to_Resolve__c</description>
        <externalDeveloperName>Effort_to_Resolve__c</externalDeveloperName>
        <label>Effort_to_Resolve__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailToCase_c__c</fullName>
        <description>EmailToCase__c</description>
        <externalDeveloperName>EmailToCase__c</externalDeveloperName>
        <label>EmailToCase__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Area_Owner_c__c</fullName>
        <description>Email_Area_Owner__c</description>
        <externalDeveloperName>Email_Area_Owner__c</externalDeveloperName>
        <label>Email_Area_Owner__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Case_Owner_Manager_Manager_c__c</fullName>
        <description>Email_Case_Owner_Manager_Manager__c</description>
        <externalDeveloperName>Email_Case_Owner_Manager_Manager__c</externalDeveloperName>
        <label>Email_Case_Owner_Manager_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Case_Owner_Manager_c__c</fullName>
        <description>Email_Case_Owner_Manager__c</description>
        <externalDeveloperName>Email_Case_Owner_Manager__c</externalDeveloperName>
        <label>Email_Case_Owner_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Category_Owner_c__c</fullName>
        <description>Email_Category_Owner__c</description>
        <externalDeveloperName>Email_Category_Owner__c</externalDeveloperName>
        <label>Email_Category_Owner__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Creator_Override_c__c</fullName>
        <description>Email_Creator_Override__c</description>
        <externalDeveloperName>Email_Creator_Override__c</externalDeveloperName>
        <label>Email_Creator_Override__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_DFS_Credit_Manager_c__c</fullName>
        <description>Email_DFS_Credit_Manager__c</description>
        <externalDeveloperName>Email_DFS_Credit_Manager__c</externalDeveloperName>
        <label>Email_DFS_Credit_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Dealer_Central_Zone_c__c</fullName>
        <description>Email_Dealer_Central_Zone__c</description>
        <externalDeveloperName>Email_Dealer_Central_Zone__c</externalDeveloperName>
        <label>Email_Dealer_Central_Zone__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Field_Service_Manager_c__c</fullName>
        <description>Email_Field_Service_Manager__c</description>
        <externalDeveloperName>Email_Field_Service_Manager__c</externalDeveloperName>
        <label>Email_Field_Service_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Logistics_Export_1_c__c</fullName>
        <description>Email_Logistics_Export_1__c</description>
        <externalDeveloperName>Email_Logistics_Export_1__c</externalDeveloperName>
        <label>Email_Logistics_Export_1__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Logistics_Export_2_c__c</fullName>
        <description>Email_Logistics_Export_2__c</description>
        <externalDeveloperName>Email_Logistics_Export_2__c</externalDeveloperName>
        <label>Email_Logistics_Export_2__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Logistics_Export_3_c__c</fullName>
        <description>Email_Logistics_Export_3__c</description>
        <externalDeveloperName>Email_Logistics_Export_3__c</externalDeveloperName>
        <label>Email_Logistics_Export_3__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Order_Management_1_c__c</fullName>
        <description>Email_Order_Management_1__c</description>
        <externalDeveloperName>Email_Order_Management_1__c</externalDeveloperName>
        <label>Email_Order_Management_1__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Order_Management_2_c__c</fullName>
        <description>Email_Order_Management_2__c</description>
        <externalDeveloperName>Email_Order_Management_2__c</externalDeveloperName>
        <label>Email_Order_Management_2__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Order_Management_3_c__c</fullName>
        <description>Email_Order_Management_3__c</description>
        <externalDeveloperName>Email_Order_Management_3__c</externalDeveloperName>
        <label>Email_Order_Management_3__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sales_Director_c__c</fullName>
        <description>Email_Sales_Director__c</description>
        <externalDeveloperName>Email_Sales_Director__c</externalDeveloperName>
        <label>Email_Sales_Director__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sales_Manager_c__c</fullName>
        <description>Email_Sales_Manager__c</description>
        <externalDeveloperName>Email_Sales_Manager__c</externalDeveloperName>
        <label>Email_Sales_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encryption_Field_c__c</fullName>
        <description>Encryption_Field__c</description>
        <externalDeveloperName>Encryption_Field__c</externalDeveloperName>
        <label>Encryption_Field__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Email_c__c</fullName>
        <description>End_Customer_Email__c</description>
        <externalDeveloperName>End_Customer_Email__c</externalDeveloperName>
        <label>End_Customer_Email__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_First_Name_c__c</fullName>
        <description>End_Customer_First_Name__c</description>
        <externalDeveloperName>End_Customer_First_Name__c</externalDeveloperName>
        <label>End_Customer_First_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Last_Name_c__c</fullName>
        <description>End_Customer_Last_Name__c</description>
        <externalDeveloperName>End_Customer_Last_Name__c</externalDeveloperName>
        <label>End_Customer_Last_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Phone_c__c</fullName>
        <description>End_Customer_Phone__c</description>
        <externalDeveloperName>End_Customer_Phone__c</externalDeveloperName>
        <label>End_Customer_Phone__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Serial_c__c</fullName>
        <description>Engine_Serial__c</description>
        <externalDeveloperName>Engine_Serial__c</externalDeveloperName>
        <label>Engine_Serial__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber_c__c</fullName>
        <description>EngineeringReqNumber__c</description>
        <externalDeveloperName>EngineeringReqNumber__c</externalDeveloperName>
        <label>EngineeringReqNumber__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntitlementId__c</fullName>
        <description>EntitlementId</description>
        <externalDeveloperName>EntitlementId</externalDeveloperName>
        <label>EntitlementId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntitlementId_grax_xf_entitlement__c</fullName>
        <description>EntitlementId_grax_xf_entitlement</description>
        <externalDeveloperName>EntitlementId_grax_xf_entitlement</externalDeveloperName>
        <label>EntitlementId_grax_xf_entitlement</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Name__c</fullName>
        <description>Entitlement_Name</description>
        <externalDeveloperName>Entitlement_Name</externalDeveloperName>
        <label>Entitlement_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epsilon_DVD_Request_c__c</fullName>
        <description>Epsilon_DVD_Request__c</description>
        <externalDeveloperName>Epsilon_DVD_Request__c</externalDeveloperName>
        <label>Epsilon_DVD_Request__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_c__c</fullName>
        <description>Equipment__c</description>
        <externalDeveloperName>Equipment__c</externalDeveloperName>
        <label>Equipment__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code_c__c</fullName>
        <description>Error_Code__c</description>
        <externalDeveloperName>Error_Code__c</externalDeveloperName>
        <label>Error_Code__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Level_c__c</fullName>
        <description>Escalation_Level__c</description>
        <externalDeveloperName>Escalation_Level__c</externalDeveloperName>
        <label>Escalation_Level__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Path_c__c</fullName>
        <description>Escalation_Path__c</description>
        <externalDeveloperName>Escalation_Path__c</externalDeveloperName>
        <label>Escalation_Path__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Rules_Reset_c__c</fullName>
        <description>Escalation_Rules_Reset__c</description>
        <externalDeveloperName>Escalation_Rules_Reset__c</externalDeveloperName>
        <label>Escalation_Rules_Reset__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Time_1_c__c</fullName>
        <description>Escalation_Time_1__c</description>
        <externalDeveloperName>Escalation_Time_1__c</externalDeveloperName>
        <label>Escalation_Time_1__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Time_2_c__c</fullName>
        <description>Escalation_Time_2__c</description>
        <externalDeveloperName>Escalation_Time_2__c</externalDeveloperName>
        <label>Escalation_Time_2__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Time_3_c__c</fullName>
        <description>Escalation_Time_3__c</description>
        <externalDeveloperName>Escalation_Time_3__c</externalDeveloperName>
        <label>Escalation_Time_3__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_URL_c__c</fullName>
        <description>Escalation_URL__c</description>
        <externalDeveloperName>Escalation_URL__c</externalDeveloperName>
        <label>Escalation_URL__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_c__c</fullName>
        <description>Escalation__c</description>
        <externalDeveloperName>Escalation__c</externalDeveloperName>
        <label>Escalation__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Cost_c__c</fullName>
        <description>Est_Cost__c</description>
        <externalDeveloperName>Est_Cost__c</externalDeveloperName>
        <label>Est_Cost__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventsProcessedDate__c</fullName>
        <description>EventsProcessedDate</description>
        <externalDeveloperName>EventsProcessedDate</externalDeveloperName>
        <label>EventsProcessedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expedite_Count_c__c</fullName>
        <description>Expedite_Count__c</description>
        <externalDeveloperName>Expedite_Count__c</externalDeveloperName>
        <label>Expedite_Count__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Open_Count_c__c</fullName>
        <description>Expedite_Open_Count__c</description>
        <externalDeveloperName>Expedite_Open_Count__c</externalDeveloperName>
        <label>Expedite_Open_Count__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Promise_Date_Change_Count_c__c</fullName>
        <description>Expedite_Promise_Date_Change_Count__c</description>
        <externalDeveloperName>Expedite_Promise_Date_Change_Count__c</externalDeveloperName>
        <label>Expedite_Promise_Date_Change_Count__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Report_Full_c__c</fullName>
        <description>Expedite_Report_Full__c</description>
        <externalDeveloperName>Expedite_Report_Full__c</externalDeveloperName>
        <label>Expedite_Report_Full__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expeditor_c__c</fullName>
        <description>Expeditor__c</description>
        <externalDeveloperName>Expeditor__c</externalDeveloperName>
        <label>Expeditor__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_c__c</fullName>
        <description>Expiration_Date__c</description>
        <externalDeveloperName>Expiration_Date__c</externalDeveloperName>
        <label>Expiration_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explanation_c__c</fullName>
        <description>Explanation__c</description>
        <externalDeveloperName>Explanation__c</externalDeveloperName>
        <label>Explanation__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_c__c</fullName>
        <description>Extension__c</description>
        <externalDeveloperName>Extension__c</externalDeveloperName>
        <label>Extension__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Hours_Estimate_c__c</fullName>
        <description>External_Hours_Estimate__c</description>
        <externalDeveloperName>External_Hours_Estimate__c</externalDeveloperName>
        <label>External_Hours_Estimate__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <description>External_ID__c</description>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F1_Release_OLD_c__c</fullName>
        <description>F1_Release_OLD__c</description>
        <externalDeveloperName>F1_Release_OLD__c</externalDeveloperName>
        <label>F1_Release_OLD__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F1_Release_c__c</fullName>
        <description>F1_Release__c</description>
        <externalDeveloperName>F1_Release__c</externalDeveloperName>
        <label>F1_Release__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>